# dvrk-gazebo

./: CMakeLists.txt  package.xml
config/: davinci_control.yaml
launch/: dvrk.launch  gazebo.launch
meshes/: labirintus1.blend  labirintus1.dae  labirintus1.stl  labirintus2_1.blend  labirintus2_1.dae  labirintus2_1.stl  maze.dae  maze.stl
meshes/psm/: outer_pitch_top.dae
model/: gazebo_psm.urdf  gazebo_psm_with_mimic.urdf
scripts/: auto_move.cpp  connection-goal-pos.cpp  connection.cpp  connection_goal_set_zero.cpp  gazebo_move.cpp  labirintus.cpp  program_move.cpp
world/: cube.world
