<?xml version="1.0"?>
<package>
  <name>dvrk-gazebo</name>
  <version>0.0.1</version>
  <description>The ros to gazebo connection package</description>

  <maintainer email="lilla.elo@irob.uni-obuda.hu">Lilla Elo</maintainer>
  <license>CISST</license>

  <author email="lilla.elo@irob.uni-obuda.hu">Lilla Elo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros                                                                 
       	gazebo_plugin_path="${prefix}/lib"
       	gazebo_model_path="${prefix}/.." 

    		gazebo_media_path="${prefix}:/.."             
    		gazebo_resource_path="${prefix}:/.."/>   
  </export>
</package>
